# Enmusiquer

./: .gitignore
.githooks/: pre-commit
.github/workflows/: backend-image.yml  backend-test.yml  dev-deploy-v2.yml  dev-deploy.yml  dev-health-check.yml  terraform-secret-guard.yml  terraform-validate.yml  workflow-lint.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260211_0001_initial_schema.py  20260211_0002_add_billing_settings.py
backend/app/: main.py
backend/app/api/v1/: deps.py  pagination.py  router.py  schemas.py  serializers.py
backend/app/api/v1/endpoints/: billing.py  interactions.py  rankings.py  recommendations.py  search.py  system.py  tags.py  tracks.py
backend/app/core/: config.py
backend/app/db/: types.py
backend/app/models/: __init__.py  billing_setting.py  bookmark.py  notification.py  tag.py  track.py  track_tag.py  user.py  user_track_preference.py
backend/app/services/: url_normalizer.py
backend/scripts/: seed_mvp.py
backend/tests/: conftest.py  test_billing_api.py  test_interactions_api.py  test_rankings_api.py  test_recommendations_api.py  test_search_api.py  test_tracks_api.py  test_url_normalizer.py
docs/new/: 20260211草案.md  API契約.md  仕様書.md  編集履歴.md
frontend/: README.md  app.js  index.html  styles.css
scripts/: api-health.ps1  check_terraform_secrets.ps1  gh-dev-deploy.ps1  install_git_hooks.ps1  setup_github_actions_config.ps1  tf-apply-safe.ps1  tf-cli.ps1  tf-doctor.ps1  tf-plan-all.ps1  tf-setup.ps1  tf.ps1
(+36 files in other folders)
